--- a/web/src/styles/node_editor.css
+++ b/web/src/styles/node_editor.css
@@ -156,20 +156,53 @@
 }
 
 .node-inputs {
-  margin-top: 0.5em;
+  position: relative;
+  margin-top: -30px;
+  padding-right: 2em;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  width: 100%;
+  height: 12px;
+}
+
+/* multiple outputs */
+.multi-outputs .react-flow__handle-right {
+  top: unset !important;
+}
+
+ul.multi-outputs {
+  display: flex;
+  gap: 1em;
+  position: absolute;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  top: unset;
+  bottom: 0;
+  right: unset;
+  left: 0;
+  height: 20px;
+}
+ul.multi-outputs li{
+  position: relative;
+  width: 10px;
+}
+
+/*ul.multi-outputs li{}*/
+ul.multi-outputs li::marker {
+  content: "" !important;
 }
 
 /* NODE PROPERTY */
-.node-property,
-.node-output {
+.react-flow__node .node-property,
+.react-flow__node .node-output {
   position: relative;
-  width: auto;
-  /* min-width: 150px; */
-  max-width: 250px;
-  min-height: 15px;
+  width: 8px;
+  height: 10px;
   border: 0;
-  padding: 0.25em 0.75em;
-  margin: 1px 0 0;
+  padding: 0;
+  margin: 0;
 }
 .node-output {
   padding: 0 1em;
@@ -188,12 +221,13 @@
   word-spacing: -2px;
 }
 
-.node-property.bool {
-  min-width: 35px;
-}
-
 /* .node-property label {
 } */
+
+/* NODE VALUES */
+.react-flow__node .value-default, .react-flow__node .value-changed{
+  display: none;
+}
 
 /* DEFAULT PROPERTY */
 .value-default label {
@@ -319,11 +353,6 @@
 
 .react-flow.zoomed-out .react-flow__node-nodetool\.loop\.Loop {
   background-color: transparent;
-}
-
-/* HIDE ENUM HANDLE */
-.node-property.enum .react-flow__handle {
-  display: none;
 }
 
 /* LIST VIEW */
